# design_patterns

./: .ycm_extra_conf.py  CMakeLists.txt  LICENSE  design_patterns_version.h.in
include/: design_patterns_version.h  observer.h
src/: design_patterns.cpp  observer.cpp
tests/: design_patterns_test.cpp
